style: downloaded image to serve locally

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ img {
   align-items: center;
   margin: 30px;
   border: 1px solid purple;
-  background-image: url('https://www.daynalawphotography.com/wp-content/uploads/2019/01/Twilight.gif');
+  background-image: url('twilight.jpg');
   min-height: 75vh;
   width: 90vw;
   border-radius: 30px;
