fix: fixed image link for gh-pages really

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ img {
   align-items: center;
   margin: 30px;
   border: 1px solid purple;
-  background-image: url('/mindfull-app/twilight.jpg');
+  background-image: url('/mindfull-app/Twilight.jpg');
   min-height: 75vh;
   width: 90vw;
   border-radius: 30px;
