style: added back up font

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ img {
 
 body {
   background-color: aliceblue;
-  font-family: 'Montserrat', 'Century Gothic';
+  font-family: 'Montserrat', 'Century Gothic', 'Helvetica';
   color: purple;
 }
 
