--- a/style.css
+++ b/style.css
@@ -48,6 +48,8 @@ button {
   border-radius: 28px;
   border: 1px solid black;
   cursor: pointer;
+  width: 20vw;
+  font-size: 16px;
 }
 
 button:hover {
