--- a/style.css
+++ b/style.css
@@ -27,6 +27,15 @@ body {
   color: purple;
 }
 
+h1 {
+  background-color: rgba(206, 115, 206, 0.7);
+  padding: 0.8vw;
+  margin-left: 0.5vw;
+  margin-right: 0.5vw;
+  border-radius: 30px;
+  border: 0.5px solid purple;
+}
+
 /* FORMS */
 
 .buttons {
@@ -44,12 +53,14 @@ textarea {
 }
 
 button {
+  font-family: 'Montserrat', 'Century Gothic', 'Helvetica';
+  color: purple;
   margin: 8px;
   padding: 14px 10px 10px 10px;
   max-height: 50px;
   background-color: rgb(206, 115, 206);
   border-radius: 28px;
-  border: 1px solid black;
+  border: 1px solid purple;
   cursor: pointer;
   width: 20vw;
   font-size: 16px;
